--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,13 @@ backports.zoneinfo==0.2.1
 Django==4.2.7
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
+drf-yasg==1.21.7
+inflection==0.5.1
+packaging==23.2
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pytz==2023.3.post1
+PyYAML==6.0.1
 sqlparse==0.4.4
 typing_extensions==4.8.0
+uritemplate==4.1.1
